<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10px"
    tools:context="net.lm.ied.sqlitedatabase.MainActivity">

    <Button
        android:id="@+id/btn_create_or_open_db"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doCreateOrOpenDB"
        android:text="@string/create_or_open_db"/>

    <Button
        android:id="@+id/btn_create_tale"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doCreateTable"
        android:text="@string/create_table"/>

    <Button
        android:id="@+id/btn_add_record"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doAddRecord"
        android:text="@string/add_record"/>
    <Button
        android:id="@+id/btn_update_record"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doUpdateRecord"
        android:text="@string/update_record" />

    <Button
        android:id="@+id/btn_display_all_records"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doDisplayAllRecords"
        android:text="@string/display_all_records" />

    <Button
        android:id="@+id/btn_delete_all_records"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doDeleteAllRecords"
        android:text="@string/delete_all_records" />

    <Button
        android:id="@+id/btn_delete_table"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doDeleteTable"
        android:text="@string/delete_table" />

    <Button
        android:id="@+id/btn_delete_db"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="doDeleteDB"
        android:text="@string/delete_db" />

</LinearLayout>
